# krab

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.service  LICENSE  README.md  RELEASE_POLICY.md  check_health.ps1  deny.toml  docker-compose.nft.yaml  docker-compose.yml  krab.toml
.github/workflows/: api-contract.yaml  db-lifecycle.yaml  dependency-security.yaml  e2e-depth.yaml  nft.yaml  ops-hardening.yaml  rustdoc-publish.yaml  service-smoke.yaml  wasm-size.yaml
crates/framework/krab_client/: Cargo.toml
crates/framework/krab_client/src/: components.rs  lib.rs
crates/framework/krab_core/: Cargo.toml
crates/framework/krab_core/src/: api_tests.rs  auth_tests.rs  config.rs  db_tests.rs  head.rs  http.rs  i18n.rs  image.rs  isr.rs  layout.rs  lib.rs  loading.rs  protocol.rs  protocol_tests.rs  render_stream.rs  repository.rs  server_fn.rs  server_fn_tests.rs  service.rs  store.rs  style_scope.rs  telemetry.rs  ws.rs
crates/framework/krab_macros/: Cargo.toml
crates/framework/krab_macros/src/: lib.rs
crates/framework/krab_macros/tests/: view_expansion.rs
crates/framework/krab_server/src/: lib.rs
crates/tooling/krab_cli/: Cargo.toml
crates/tooling/krab_cli/src/: main.rs
crates/tooling/krab_orchestrator/: Cargo.toml
crates/tooling/krab_orchestrator/src/: main.rs
docs/: API.md  database.md  deployment.md  protocol_flexibility.md  security.md  signal_safety.md
docs/wiki/: 00_home.md  01_getting_started.md  02_architecture_map.md  03_dev_workflows.md  04_operational_runbook.md  10_core_runtime.md  11_server_runtime.md  12_client_hydration.md  13_macro_system.md  20_orchestrator_and_cli.md  21_ci_cd_and_governance.md  30_service_auth.md  31_service_users.md  32_service_frontend.md  40_troubleshooting_playbook.md  50_benchmark_methodology.md  51_benchmark_results.md  README.md
krab_cli/: Cargo.toml
krab_cli/src/: main.rs
krab_client/src/: components.rs  lib.rs
krab_core/: Cargo.toml
krab_core/src/: api_tests.rs  auth_tests.rs  config.rs  db.rs  db_tests.rs  error_boundary.rs  head.rs  http.rs  i18n.rs  image.rs  isr.rs  layout.rs  lib.rs  loading.rs  resilience.rs  server_fn.rs  service.rs  signal.rs  store.rs  style_scope.rs  telemetry.rs  ws.rs
krab_macros/src/: lib.rs
krab_macros/tests/: compile_fail.rs  view_expansion.rs
krab_macros/tests/compile_fail/: mismatched_closing_tag.rs  mismatched_closing_tag.stderr
krab_orchestrator/: Cargo.toml
krab_orchestrator/src/: main.rs
krab_server/: Cargo.toml
krab_server/src/: lib.rs
monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus.yml
plans/: 01_vision_and_philosophy.md  02_architecture_design.md  03_roadmap.md  04_package_management.md  05_performance_and_efficiency.md  07_dev_workflow.md  08_production_readiness.md  09_workspace_structure_standard.md  README.md  api_governance.md  api_protocol_flexibility_plan.md  benchmark_testing_plan.md  db_rollback_runbook.md  environment_template.md  framework_file_by_file_audit_plan.md  oncall_playbook.md  service_dashboard.json.md  slo_alerts.md
plans/load_test_artifacts/: README.md  benchmark_config.json  external_results.json  external_summary.md  targeted_hardening_results.json  thresholds.json  trend_history.csv
plans/protocol_flexibility/: 00_current_state_acknowledgement.md  01_detailed_implementation_blueprint.md  02_phase_a_core_primitives.md  03_phase_b_users_pilot.md  04_phase_c_frontend_integration.md  05_phase_d_auth_guardrails.md  06_phase_e_governance_ci_cli.md  07_rollback_and_safety.md  MASTER_TASK_LIST.md  README.md
scripts/: nft_append_trends.py  nft_benchmark_runner.py  nft_multi_service_gate.py  nft_scaling_compare.py  targeted_hardening_checks.py
service_auth/: Cargo.toml
service_auth/src/: main.rs
service_frontend/: Cargo.toml  build.rs
service_frontend/public/: README.md
service_frontend/public/__ssg/: asset-manifest.json  greet.html
service_frontend/src/: lib.rs  main.rs
service_frontend/src/routes/: contact.rs
service_users/: Cargo.toml
service_users/src/: main.rs
services/service_auth/: Cargo.toml
services/service_auth/src/: main.rs
services/service_frontend/: Cargo.toml  build.rs
services/service_frontend/public/: README.md
services/service_frontend/public/__ssg/: about.html  blog_integration-check.html  blog_welcome.html  contact.html  index.html
services/service_frontend/src/: main.rs  protocol_client.rs
services/service_frontend/src/api/: hello.rs  middleware_probe.rs
services/service_users/: Cargo.toml
services/service_users/contracts/: graphql_schema_v1.graphql  users_gateway_upstreams_v1.json
services/service_users/src/: capabilities.rs  lib.rs  main.rs
services/service_users/src/adapters/: graphql.rs  mod.rs  rest.rs  rpc.rs
services/service_users/src/db/: postgres.rs  sqlite.rs
services/service_users/src/domain/: errors.rs  models.rs  service.rs
