[workspace]
members = [
    "crates/framework/krab_core",
    "services/service_frontend",
    "crates/tooling/krab_orchestrator",
    "services/service_auth",
    "services/service_users",
    "crates/framework/krab_macros",
    "crates/framework/krab_client",
    "crates/tooling/krab_cli",
    "crates/framework/krab_server",
]
resolver = "2"

[workspace.dependencies]
axum = "=0.8.8"
async-graphql = "=7.2.1"
async-graphql-axum = "=7.2.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tower = "0.5"
tower-http = "0.6"

