[package]
name = "krab_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
tokio = { workspace = true, features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.0"
mime_guess = "2.0"
krab_core = { path = "../krab_core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace", "cors", "fs"] }
tracing.workspace = true
