[package]
name = "service_frontend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
# Enable non-functional / performance tests.  Run via `cargo test --features nft`
# or by setting KRAB_NFT=1 in CI (see .github/workflows/nft.yaml).
nft = []

[dependencies]
axum = { workspace = true, features = ["ws"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { workspace = true, features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
krab_core = { path = "../krab_core", features = ["rest", "redis-store"] }
krab_client = { path = "../krab_client" }
krab_server = { path = "../krab_server" }
krab_macros = { path = "../krab_macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace", "cors", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.32"
