[package]
name = "service_auth"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "compression-gzip", "request-id", "trace"] }
krab_core = { path = "../../crates/framework/krab_core", features = ["rest", "redis-store"] }
anyhow.workspace = true
async-trait.workspace = true
