[package]
name = "krab_client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
krab_core = { path = "../krab_core", features = ["web"] }
krab_macros = { path = "../krab_macros" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
inventory = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Window",
    "console",
    "Event",
    "EventTarget",
    "Text",
    "Comment",
    "DocumentFragment",
]

[features]
web = []
